--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.7.3'
 	id 'io.spring.dependency-management' version '1.0.13.RELEASE'
 	id 'java'
-	id "org.flywaydb.flyway" version "9.2.1"
+	id 'org.flywaydb.flyway' version '9.3.0'
 }
 
 group = 'com.astlex'
@@ -17,13 +17,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.flywaydb:flyway-core:9.3.0'
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
-}
-
-flyway {
-	url = 'jdbc:postgresql://localhost:5432/hrd_db?user=postgres&password=RikiTikiTavi'
 }
 
 tasks.named('test') {
