--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+server.servlet.context-path=/
 
+spring.security.user.name=superadmin
+spring.security.user.password=
+
+# DB Settings
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/hrd
+spring.datasource.username=postgres
+spring.datasource.password=
+spring.datasource.validationQuery=SELECT 1
+
+#flyway.url=${spring.datasource.url}
+#flyway.user=${spring.datasource.username}
+#flyway.password=${spring.datasource.password}
